# crawl2md

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  selectors_kentico.txt
crawl2md/: __init__.py  cleaner.py  cli.py  crawler.py  file_handler.py  html_cleaner.py  sitemap.py
crawl2md.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_cleaner.py  test_crawler.py  test_file_handler.py  test_sitemap.py
